<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".RegisterActivity"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/image" />

    <TextView
        style="@style/simpleView"
        android:text="@string/welcome_to_app2"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/et_email_regis"
        style="@style/EtStyle"
        android:hint="@string/email"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:autofillHints="no"
        android:layout_marginTop="20dp"
        android:inputType="text"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/et_name_regis"
        style="@style/EtStyle"
        android:hint="@string/name"
        android:drawableStart="@drawable/ic_person_outline_black_24dp"
        android:autofillHints="no"
        android:layout_marginTop="10dp"
        android:inputType="text"
        tools:ignore="TextFields" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

    <EditText
        android:id="@+id/et_password_regis"
        style="@style/EtStyle"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:autofillHints="no"
        tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_register"
        style="@style/btnStyle2"
        android:text="@string/sign_up"/>

    <TextView
        android:id="@+id/tv_name"
        style="@style/simpleView"
        android:text="@string/back_to_login_page"
        android:textSize="15sp"
        android:onClick="backTologinPage"
        android:layout_gravity="right"
        tools:ignore="OnClick,RtlHardcoded" />

</LinearLayout>