<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPaswordActivity"
    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="center">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/image" />

    <TextView
        style="@style/simpleView"
        android:text="@string/get_ready_for_forgot_password"
        android:textAlignment="center"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/et_forgot_password"
        style="@style/EtStyle"
        android:hint="@string/enter_your_email"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:autofillHints="no"
        android:layout_marginTop="20dp"
        android:inputType="text"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/btn_confirm"
        style="@style/btnStyle2"
        android:text="@string/confirm"/>

    <TextView
        android:id="@+id/tv_name"
        style="@style/simpleView"
        android:text="@string/back_to_login_page"
        android:textSize="15sp"
        android:onClick="forgotPassword"
        android:layout_gravity="right"
        tools:ignore="OnClick,RtlHardcoded" />



</LinearLayout>