<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">



    <EditText
        android:id="@+id/et_search_location"
        style="@style/EtStyle"
        android:hint="@string/search_your_destination"
        android:autofillHints="no"
        android:layout_marginTop="10dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:inputType="text"
        tools:ignore="TextFields" />



    <fragment
            android:id="@+id/google_maps"
            android:layout_above="@+id/img_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/et_search_location"
            android:name="com.google.android.gms.maps.SupportMapFragment" />

<!--    <Button-->
<!--        android:id="@+id/btn_logout"-->
<!--        style="@style/btnStyle"-->
<!--        android:text="@string/logout"-->
<!--        android:layout_marginStart="32dp"-->
<!--        android:layout_marginEnd="32dp"-->
<!--        android:layout_alignParentBottom="true"/>-->



        <ImageView
            android:id="@+id/img_distance"
            android:layout_width="180dp"
            android:layout_marginStart="16dp"
            android:layout_height="wrap_content"
            android:src="@drawable/distance"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/tv_distance"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginStart="100dp"
            android:fontFamily="sans-serif-medium"
            android:layout_alignParentBottom="true"
            android:text="@string/_0_km" />



<!--        <TextView-->
<!--            android:id="@+id/tv_time"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_alignParentStart="true"-->
<!--            android:layout_alignParentTop="true"-->
<!--            android:layout_marginStart="343dp"-->
<!--            android:layout_marginTop="686dp"-->
<!--            android:text="@string/_0_min" />-->

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fb_gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/fb_direction"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@android:color/holo_red_light"
            android:src="@drawable/ic_my_gps"
            android:layout_alignParentBottom="true"
            tools:ignore="RelativeOverlap" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fb_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_red_light"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_directions"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp" />



    <ImageView
        android:id="@+id/btn_search_location"
        style="@style/EtSearchLocation"
        android:layout_alignParentTop="true"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_search_black_24dp" />

</RelativeLayout>